--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to Chirp</title>
+    <link rel="shortcut icon" href="images/bird.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -11,6 +12,7 @@
       <div class="welcome">
         <h1>Welcome to Chirp</h1>
         <p>Where the Now Meets the Chirp</p>
+        <img src="images/bird.png" alt="gif" class="bird-logo" />
       </div>
       <div class="sign">
         <fieldset id="sign-in-container" class="sign-in-container">
