fixed mobile nav

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               name="SignUpPassword"
               placeholder="Enter password here..."
               required />
-            <button type="submit">Sign In</button>
+            <button type="submit">Sign Up</button>
             <p class="acc" onclick="toggleForm(this)">Have an Account</p>
           </form>
         </fieldset>
