--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
               placeholder="Enter password here..."
               required />
             <button type="submit">Sign Up</button>
-            <p class="acc" onclick="toggleForm(this)">Have an Account</p>
+            <p class="acc" onclick="toggleForm(this)">
+              Already Have an Account?
+            </p>
           </form>
         </fieldset>
       </div>
